// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<OAuth2SessionDetail> > renders a finished session details 1`] = `
<DocumentFragment>
  <div
    class="_blockList_f8cc7f"
  >
    <header
      class="_header_92353c"
    >
      <a
        class="_backButton_92353c"
        href="/sessions"
      >
        <svg
          class="cpd-icon"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.207 5.293a1 1 0 0 1 0 1.414L7.914 11H18.5a1 1 0 1 1 0 2H7.914l4.293 4.293a1 1 0 0 1-1.414 1.414l-6-6a1 1 0 0 1 0-1.414l6-6a1 1 0 0 1 1.414 0Z"
          />
        </svg>
      </a>
      <h3
        class="_typography_yh5dq_162 _font-heading-md-semibold_yh5dq_121"
      >
        abcd1234
      </h3>
    </header>
    <div
      class="_block_17898c"
    >
      <h6
        class="_typography_yh5dq_162 _font-body-md-semibold_yh5dq_64"
      >
        Session
      </h6>
      <ul
        class="_list_040867"
      >
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            ID
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              session-id
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Device ID
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              abcd1234
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Signed in
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <time
              datetime="2023-06-29T03:35:17Z"
            >
              Thu, 29 Jun 2023, 03:35
            </time>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Finished
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <time
              datetime="2023-07-29T03:35:17Z"
            >
              Sat, 29 Jul 2023, 03:35
            </time>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Last Active
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <span
              title="Sat, 29 Jul 2023, 03:35"
            >
              Inactive for 90+ days
            </span>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            IP Address
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              1.2.3.4
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Scopes
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <span>
              <code>
                openid
              </code>
              <code>
                urn:matrix:org.matrix.msc2967.client:api:*
              </code>
              <code>
                urn:matrix:org.matrix.msc2967.client:device:abcd1234
              </code>
            </span>
          </p>
        </li>
      </ul>
    </div>
    <div
      class="_block_17898c"
    >
      <h6
        class="_typography_yh5dq_162 _font-body-md-semibold_yh5dq_64"
      >
        <a
          class="_link_1mzip_17"
          data-kind="primary"
          href="/clients/test-id"
          rel="noreferrer noopener"
        >
          Client
        </a>
      </h6>
      <ul
        class="_list_040867"
      >
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Name
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            Element
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            ID
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              test-client-id
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Uri
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <a
              href="https://element.io"
              rel="noreferrer"
              target="_blank"
            >
              https://element.io
            </a>
          </p>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<OAuth2SessionDetail> > renders session details 1`] = `
<DocumentFragment>
  <div
    class="_blockList_f8cc7f"
  >
    <header
      class="_header_92353c"
    >
      <a
        class="_backButton_92353c"
        href="/sessions"
      >
        <svg
          class="cpd-icon"
          fill="currentColor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.207 5.293a1 1 0 0 1 0 1.414L7.914 11H18.5a1 1 0 1 1 0 2H7.914l4.293 4.293a1 1 0 0 1-1.414 1.414l-6-6a1 1 0 0 1 0-1.414l6-6a1 1 0 0 1 1.414 0Z"
          />
        </svg>
      </a>
      <h3
        class="_typography_yh5dq_162 _font-heading-md-semibold_yh5dq_121"
      >
        abcd1234
      </h3>
    </header>
    <div
      class="_block_17898c"
    >
      <h6
        class="_typography_yh5dq_162 _font-body-md-semibold_yh5dq_64"
      >
        Session
      </h6>
      <ul
        class="_list_040867"
      >
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            ID
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              session-id
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Device ID
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              abcd1234
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Signed in
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <time
              datetime="2023-06-29T03:35:17Z"
            >
              Thu, 29 Jun 2023, 03:35
            </time>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Last Active
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <span
              title="Sat, 29 Jul 2023, 03:35"
            >
              Inactive for 90+ days
            </span>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            IP Address
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              1.2.3.4
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Scopes
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <span>
              <code>
                openid
              </code>
              <code>
                urn:matrix:org.matrix.msc2967.client:api:*
              </code>
              <code>
                urn:matrix:org.matrix.msc2967.client:device:abcd1234
              </code>
            </span>
          </p>
        </li>
      </ul>
    </div>
    <div
      class="_block_17898c"
    >
      <h6
        class="_typography_yh5dq_162 _font-body-md-semibold_yh5dq_64"
      >
        <a
          class="_link_1mzip_17"
          data-kind="primary"
          href="/clients/test-id"
          rel="noreferrer noopener"
        >
          Client
        </a>
      </h6>
      <ul
        class="_list_040867"
      >
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Name
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            Element
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            ID
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <code>
              test-client-id
            </code>
          </p>
        </li>
        <li
          class="_detailRow_040867"
        >
          <p
            class="_typography_yh5dq_162 _font-body-sm-semibold_yh5dq_45 _detailLabel_040867"
          >
            Uri
          </p>
          <p
            class="_typography_yh5dq_162 _font-body-sm-regular_yh5dq_40 _detailValue_040867"
          >
            <a
              href="https://element.io"
              rel="noreferrer"
              target="_blank"
            >
              https://element.io
            </a>
          </p>
        </li>
      </ul>
    </div>
    <button
      aria-controls="radix-:r0:"
      aria-expanded="false"
      aria-haspopup="dialog"
      class="_button_dyfp8_17 _has-icon_dyfp8_55 _destructive_dyfp8_99"
      data-kind="secondary"
      data-size="sm"
      data-state="closed"
      role="button"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        height="20"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 12.031a.97.97 0 0 1 .287-.712.968.968 0 0 1 .713-.289h7.15l-1.875-1.875a.96.96 0 0 1-.3-.7c0-.266.108-.508.325-.725a.93.93 0 0 1 .712-.287.977.977 0 0 1 .688.287l3.6 3.6c.1.1.17.209.212.325.042.117.063.242.063.375 0 .134-.02.259-.063.375a.877.877 0 0 1-.212.325l-3.6 3.6a.93.93 0 0 1-.712.288.977.977 0 0 1-.688-.288 1.02 1.02 0 0 1-.313-.712.93.93 0 0 1 .288-.713l1.875-1.875H10a.968.968 0 0 1-.713-.287A.968.968 0 0 1 9 12.03Zm-6-7c0-.55.196-1.02.587-1.412A1.926 1.926 0 0 1 5 3.03h6a.97.97 0 0 1 .713.288.968.968 0 0 1 .287.712.97.97 0 0 1-.287.713.968.968 0 0 1-.713.287H5v14h6a.97.97 0 0 1 .713.288.968.968 0 0 1 .287.712.97.97 0 0 1-.287.713.968.968 0 0 1-.713.287H5c-.55 0-1.02-.196-1.413-.587A1.926 1.926 0 0 1 3 19.03v-14Z"
        />
      </svg>
      Sign out
    </button>
  </div>
</DocumentFragment>
`;
